--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
 <html>
 <head>
     <title></title>
-    <script src="script.js">
-
-    </script>
+    <style type="text/css">
+        #myCanvas {
+            border: 5px solid;
+            border-color: rgb(222, 184, 135);
+            box-shadow: 2px 5px 5px 2px rgb(120,120,120);
+            border-radius: 50px 0px 50px 0px;
+        }
+    </style>
+    <script src="script.js"></script>
 </head>
 <body>
-<canvas width="600" height="600" id="myCanvas"></canvas>
+<canvas width="250" height="250" id="myCanvas"></canvas>
+<!-- <img src="http://fc01.deviantart.net/fs30/f/2008/102/a/4/Roman_Clock_by_a_lemonhead.png" hidden/> -->
+<!-- image source goes to -->
 </body>
 </html>
