added clock images

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <canvas width="250" height="250" id="myCanvas"></canvas>
-<!-- <img src="http://fc01.deviantart.net/fs30/f/2008/102/a/4/Roman_Clock_by_a_lemonhead.png" hidden/> -->
+<img src="res/roman.png" hidden/>
 <!-- image source goes to -->
 </body>
 </html>
