--- a/index.html
+++ b/index.html
@@ -3,18 +3,23 @@
 <head>
     <title></title>
     <style type="text/css">
-        #myCanvas {
+        #clock {
             border: 5px solid;
             border-color: rgb(222, 184, 135);
             box-shadow: 2px 5px 5px 2px rgb(120,120,120);
             border-radius: 50px 0px 50px 0px;
+            width: 250px;
+            height: 250px;
+            z-index: 10000;
         }
     </style>
     <script src="script.js"></script>
 </head>
 <body>
-<canvas width="250" height="250" id="myCanvas"></canvas>
-<img src="res/roman.png" hidden/>
+    <div id="clock">
+        <canvas width="250" height="250" id="myCanvas"></canvas>
+        <img src="res/roman.png" hidden/>
+    </div>
 <!-- image source goes to -->
 </body>
 </html>
