added minified file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             z-index: 10000;
         }
     </style>
-    <script src="script.js"></script>
+    <script src="script.min.js"></script>
 </head>
 <body>
     <div id="clock">
