--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 /*            width: 250px;
             height: 250px;*/
             z-index: 10000;
+            overflow: hidden;
         }
     </style>
     <script src="script.min.js"></script>
@@ -30,7 +31,8 @@
                     minutes: 150,
                     hour: 100,
                     seconds: 150 
-                }
+                },
+                img: "numbers_b"
             });
         });
     </script>
