--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     hour: 100,
                     seconds: 150 
                 },
-                img: "numbers_b"
+                img: "numbers_"
             });
         });
     </script>
