--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             overflow: hidden;
         }
     </style>
-    <script src="script.js"></script>
+    <script src="clock.min.js"></script>
 </head>
 <body>
     <div id="clock">
